# fastapi_12hw

home_work11/: main.py  pyproject.toml
home_work11/src/: schemas.py
home_work11/src/conf/: config.py
home_work11/src/database/: db.py  models.py
home_work11/src/repository/: contacts.py  users.py
home_work11/src/routes/: auth.py  contacts.py
home_work11/src/services/: auth.py
